--- a/education.tex
+++ b/education.tex
@@ -1,13 +1,9 @@
 \begin{rubric}{Education}
-\entry*[2009 -- 2013]%
-	\textbf{Ph.D., Unseen University} High Energy Magic.
-	\par Thesis title: \emph{Low-Cost Mana Generation in Under-Resouced Evironments.}
-%
-\entry*[2003 -- 2006]%
-	\textbf{M.Sc.~Computer Science, Unseen} in High Energy Magic.\par
-	Thesis title: \emph{Applying ant algorithms in automatic design of novel magic charms}.
+\entry*[2021 -- 2023]%
+	\textbf{M.Sc.~Cibersecurity and Digital Forensics} in Polytechnic of Leiria.\par
+	Thesis title: \emph{Forensic Analysis of the Garmin Connect Android Application}.
 % 
-\entry*[2003 -- 2006]%
-	\textbf{M.Sc.~Computer Science, Unseen} in High Energy Magic.\par
-	Thesis title: \emph{Applying ant algorithms in automatic design of novel magic charms}.
+\entry*[2018 -- 2021]%
+	\textbf{B.Sc.~Computer Science} in Polytechnic of Coimbra.\par
+	Project title: \emph{Project Akrasia}.
 \end{rubric}
