--- a/employment.tex
+++ b/employment.tex
@@ -1,10 +1,10 @@
 \begin{rubric}{Employment History}
-\entry*[2014 -- $\cdots\cdot$]%
-	\textbf{Community Witch,} Village of Frying Pans.
+\entry*[2022 -- $\cdots\cdot$]%
+	\textbf{Lecturer.} Computer Engineering Department, School of Technology and Management, Polytechnic of Leiria.
 %
 % Blank lines result in extra space!
 %
-\entry*[2013 -- 2015]%
-	\textbf{Lecturer.} Information Technology Department, School of Engineering, Science and Technology, XYZ College.
+\entry*[2021 -- 2023]%
+	\textbf{Research Fellow} Center for Innovative Care and Health Technology, Polytechnic of Leiria.
 %
 \end{rubric}
