--- a/misc.tex
+++ b/misc.tex
@@ -1,11 +1,29 @@
 \begin{rubric}{Miscellaneous Experience}
 \subrubric{Awards and Achievements}
-\entry*[2002] \textbf{Merit Award}, Random Training Course held at Secret Location.
+\entry*[2022] \textbf{Outstanding Merit Scholarship}, Awarded to the 3 best university students residents in Oliveira do Hospital.
 %
-\entry*[2001] \textbf{Department Prize for Outstanding Student Performance}, Unseen University.
+\entry*[2022] \textbf{Finalist in the Digital Health category}, Hackaton Tecstorm 2022.
+%
+\entry*[2021] \textbf{Merit Award}, Top Bachelor Finalist, School of Technology and Management of Oliveira do Hospital.
+%
+\entry*[2021] \textbf{Second Place in the category 5G of the Future}, Hackaton Tecstorm 2021.
 
 \subrubric{Certification}
-\entry*[2014] \textbf{Certified XYZ Practioner}. Awarded by X Insitute.
-\entry*[2006] \textbf{Certified Level 3 in ABC}. Awarded by ABC.
+\entry*[2023] \textbf{CCSK v4.1 Foundation Training}. Awarded by Cloud Security Alliance.
+\entry*[2023] \textbf{IoT Fundamentals: Connecting Things}. Awarded by Cisco.
+\entry*[2023] \textbf{Networking Academy Learn-A-Thon 2023}. Awarded by Cisco.
+\entry*[2023] \textbf{Introduction to IoT}. Awarded by Cisco.
+\entry*[2022] \textbf{CLA: Programming Essentials in C}. C++ Institute.
+\entry*[2022] \textbf{Network Security}. Awarded by Cisco.
+\entry*[2021] \textbf{CyberOps Associate}. Awarded by Cisco.
+\entry*[2021] \textbf{Cybersecurity Essentials}. Awarded by Cisco.
+\entry*[2021] \textbf{Introduction to Cybersecurity}. Awarded by Cisco.
+\entry*[2021] \textbf{IoT Fundamentals: IoT Security}. Awarded by Cisco.
+\entry*[2021] \textbf{JSE: Javascript Essentials 1}. Awarded by Javascript Institute.
+\entry*[2021] \textbf{CCNA: Enterprise Networking, Security, and Automation}. Awarded by Cisco.
+\entry*[2021] \textbf{CCNA: Switching, Routing, and Wireless Essentials}. Awarded by Cisco.
+\entry*[2021] \textbf{PCAP: Programming Essentials in Python}. Awarded by Python Institute.
+\entry*[2020] \textbf{CCNA: Introductions to Networks}. Awarded by Cisco.
+\entry*[2018] \textbf{NDG Linux Essentials}. Awarded by Linux Professional Institute.
 
 \end{rubric}
