--- a/cv-llt.tex
+++ b/cv-llt.tex
@@ -86,12 +86,12 @@
 
 % If you're not a researcher nor an academic, you probably don't have any publications; delete this line.
 %% Sometimes when a section can't be nicely modelled with the \entry[]... mechanism; hack our own and use \input NOT \makerubric
-\input{publications}
+%\input{publications}
 
 \makerubric{skills}
 \makerubric{misc}
 
-\makerubric{referee}
+%\makerubric{referee}
 % \input{referee-full}
 
 \end{document}
