--- a/skills.tex
+++ b/skills.tex
@@ -4,13 +4,15 @@
 \begin{rubric}{Skills}
 \noentry{2014 -- 2015}
 \entry*[Languages]
-	Strong reading, writing and speaking competencies for English, Mandarin Chinese, Bahasa Malaysia.
+	Strong reading, writing and speaking competencies for English, German, and Portuguese (native).
 \entry*[Coding\hfill]
-	Java, \smallcaps{PHP}, Python, R, \smallcaps{SQL, XML/XSL}, \LaTeX, \ldots
+	Arduino, \texttt{C\#}, Java, \smallcaps{PHP}, Python, \LaTeX.
 \entry*[Databases]
-	My\smallcaps{SQL}, Postgre\smallcaps{SQL}, \smallcaps{HSQL}, \smallcaps{SQL}ite, LotusNotes.
+	Firebase, Mongo\smallcaps{db}, My\smallcaps{SQL}, \smallcaps{SQL}ite.
 \entry*[Web Dev]
-	\textsc{Html, css}, JavaScript, Apache Web Server, Tomcat Web Server.
+	\textsc{Html, css}, JavaScript, Apache Web Server.
+ \entry*[Frameworks]
+	Django, Laravel, Java Spring, Vue\smallcaps{JS}.
 \entry*[Misc.]
-	Academic research, teaching, training, consultation, \LaTeX\ typesetting and publishing.
+	Academic research and Teaching.
 \end{rubric}
